@@ -11,9 +11,8 @@
  * Smarty {php}{/php} block plugin
  * 
  * @param string $content contents of the block
- * @param object $smarty Smarty object
- * @param boolean $ &$repeat repeat flag
  * @param object $template template object
+ * @param boolean $ &$repeat repeat flag
  * @return string content re-formatted
  */
 function smarty_block_php($params, $content, $template, &$repeat)
